# KathmanduYoga

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  kathmanduyoga (website matter for Jessica. Germany) (1).docx
backend/: .env  Dockerfile  build.sh  init_db.py  main.py  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routes/: auth.py  contact.py  courses.py  testimonials.py
frontend/: Dockerfile  build.sh  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about-us/: page.tsx
frontend/app/contact/: page.tsx
frontend/app/courses/: page.tsx
frontend/app/our-tradition/: page.tsx
frontend/app/yoga-chakra/: page.tsx
frontend/components/: animated-section.tsx  footer.tsx  header.tsx
frontend/public/: index.html
frontend/src/: ErrorBoundary.js  apiService.js  app.js  index.css  index.js
frontend/src/components/: cardcomponent.js  footer.js  navbar.js
frontend/src/components/app/: Website corrections on 21 January, 2025.docx
frontend/src/components/pages/: HomePage.js  YogaChakra.js  YogaTradition.js  aboutus.css  aboutus.js  contact.js  courses.js  home.js  testimonials.js
